カスタマイズ

--- a/pages/all-tags.html
+++ b/pages/all-tags.html
@@ -1,6 +1,7 @@
 ---
 layout: post-index
 title: Tag Archive
+permalink: /tags/
 description: "An archive of posts sorted by tag."
 comments: false
 ---
