--- a/pages/all-posts.html
+++ b/pages/all-posts.html
@@ -1,8 +1,8 @@
 ---
 layout: post-index
-title: All Posts
+title: 全ての投稿
 permalink: /posts/
-description: "An archive of posts."
+description: "これまでの全ての投稿です"
 comments: false
 ---
 
