--- a/pages/all-tags.html
+++ b/pages/all-tags.html
@@ -1,8 +1,8 @@
 ---
 layout: post-index
-title: Tag Archive
+title: タグ一覧
 permalink: /tags/
-description: "An archive of posts sorted by tag."
+description: "過去の投稿につけられたタグの一覧です"
 comments: false
 ---
 
